{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 58,
  "lineage": "981d8836-a17f-37bf-4cf1-9b3606c961ba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1-elastipIp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c9dd9097cc5a2cd",
            "association_id": "eipassoc-093ca962f096a5348",
            "domain": "vpc",
            "id": "eipalloc-00c9dd9097cc5a2cd",
            "instance": "i-04da1f564730feec0",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-050097c97d54f7158",
            "private_dns": "ip-10-2-254-254.eu-central-1.compute.internal",
            "private_ip": "10.2.254.254",
            "public_dns": "ec2-3-77-125-147.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.77.125.147",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.nat1",
            "aws_security_group.nat1-security-group",
            "aws_subnet.nat-pub",
            "aws_vpc.shared-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web-pub-elastipIp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e0b00eb555cc205",
            "association_id": "eipassoc-06eb4580a48797ba6",
            "domain": "vpc",
            "id": "eipalloc-06e0b00eb555cc205",
            "instance": "i-09e7eedf644538706",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0605f082ef83f947e",
            "private_dns": "ip-10-1-254-10.eu-central-1.compute.internal",
            "private_ip": "10.1.254.10",
            "public_dns": "ec2-18-197-25-232.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.197.25.232",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.www1",
            "aws_security_group.web-pub-security-group",
            "aws_subnet.web-pub",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-070b208e993b59cea",
            "arn": "arn:aws:ec2:eu-central-1:696358308731:instance/i-0c810103e6abc46bb",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c810103e6abc46bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bulgargas",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cee3f006e43aa052",
            "private_dns": "ip-10-2-2-41.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.2.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dc7ee23ad2d6bc2e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ee01e64e2cd3d51",
            "tags": {
              "Name": "db1"
            },
            "tags_all": {
              "Name": "db1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03e4f9d42366116e4"
            ]
          },
          "dependencies": [
            "aws_security_group.database-security-group",
            "aws_subnet.database"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-070b208e993b59cea",
            "arn": "arn:aws:ec2:eu-central-1:696358308731:instance/i-04da1f564730feec0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04da1f564730feec0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bulgargas",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-050097c97d54f7158",
            "private_dns": "ip-10-2-254-254.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.254.254",
            "public_ip": "3.77.125.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c8d3091fde6fdd7f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ac24e509ec8fbc0",
            "tags": {
              "Name": "nat1"
            },
            "tags_all": {
              "Name": "nat1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05001b3a07ddff310"
            ]
          },
          "dependencies": [
            "aws_security_group.nat1-security-group",
            "aws_subnet.nat-pub",
            "aws_vpc.shared-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "www1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-070b208e993b59cea",
            "arn": "arn:aws:ec2:eu-central-1:696358308731:instance/i-09e7eedf644538706",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e7eedf644538706",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bulgargas",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0605f082ef83f947e",
            "private_dns": "ip-10-1-254-10.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.254.10",
            "public_ip": "18.197.25.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07089037a0ce2c8dc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de49ce8831a0ca75",
            "tags": {
              "Name": "www1"
            },
            "tags_all": {
              "Name": "www1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0258cc55bcd7e2c09"
            ]
          },
          "dependencies": [
            "aws_security_group.web-pub-security-group",
            "aws_subnet.web-pub",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "shared-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:696358308731:internet-gateway/igw-02a839c0909fa9612",
            "id": "igw-02a839c0909fa9612",
            "owner_id": "696358308731",
            "tags": {
              "Name": "shared-igw"
            },
            "tags_all": {
              "Name": "shared-igw"
            },
            "vpc_id": "vpc-08ae82dc7a294f8ea"
          },
          "dependencies": [
            "aws_vpc.shared-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:696358308731:internet-gateway/igw-035e80a27e6fe58a6",
            "id": "igw-035e80a27e6fe58a6",
            "owner_id": "696358308731",
            "tags": {
              "Name": "web-igw"
            },
            "tags_all": {
              "Name": "web-igw"
            },
            "vpc_id": "vpc-0c843097e193d7414"
          },
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:696358308731:route-table/rtb-0eb793a17f48b3e5a",
            "id": "rtb-0eb793a17f48b3e5a",
            "owner_id": "696358308731",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a839c0909fa9612",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ae82dc7a294f8ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.shared-igw",
            "aws_vpc.shared-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:696358308731:route-table/rtb-06ce7e002454b940b",
            "id": "rtb-06ce7e002454b940b",
            "owner_id": "696358308731",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035e80a27e6fe58a6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c843097e193d7414"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web-igw",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-assosiate-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0864df46569f3e949",
            "route_table_id": "rtb-0eb793a17f48b3e5a",
            "subnet_id": "subnet-00ac24e509ec8fbc0"
          },
          "dependencies": [
            "aws_internet_gateway.shared-igw",
            "aws_route_table.nat-rt",
            "aws_subnet.nat-pub",
            "aws_vpc.shared-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-assosiate-web-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ec36ed749fc4205",
            "route_table_id": "rtb-06ce7e002454b940b",
            "subnet_id": "subnet-0de49ce8831a0ca75"
          },
          "dependencies": [
            "aws_internet_gateway.web-igw",
            "aws_route_table.web-rt",
            "aws_subnet.web-pub",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:696358308731:security-group/sg-03e4f9d42366116e4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e4f9d42366116e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230524105114840400000002",
            "name_prefix": "terraform-",
            "owner_id": "696358308731",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-security-group"
            },
            "tags_all": {
              "Name": "database-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ae82dc7a294f8ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shared-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat1-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:696358308731:security-group/sg-05001b3a07ddff310",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05001b3a07ddff310",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230524105114841400000003",
            "name_prefix": "terraform-",
            "owner_id": "696358308731",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nat1-security-group"
            },
            "tags_all": {
              "Name": "nat1-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ae82dc7a294f8ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shared-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-pub-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:696358308731:security-group/sg-0258cc55bcd7e2c09",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0258cc55bcd7e2c09",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230524105114818900000001",
            "name_prefix": "terraform-",
            "owner_id": "696358308731",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-pub-security-group"
            },
            "tags_all": {
              "Name": "web-pub-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c843097e193d7414"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:696358308731:subnet/subnet-09ee01e64e2cd3d51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ee01e64e2cd3d51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "696358308731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database"
            },
            "tags_all": {
              "Name": "database"
            },
            "vpc_id": "vpc-08ae82dc7a294f8ea"
          },
          "dependencies": [
            "aws_vpc.shared-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:696358308731:subnet/subnet-00ac24e509ec8fbc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.2.254.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ac24e509ec8fbc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "696358308731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nat-pub"
            },
            "tags_all": {
              "Name": "nat-pub"
            },
            "vpc_id": "vpc-08ae82dc7a294f8ea"
          },
          "dependencies": [
            "aws_vpc.shared-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:696358308731:subnet/subnet-0de49ce8831a0ca75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.254.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de49ce8831a0ca75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "696358308731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-pub"
            },
            "tags_all": {
              "Name": "web-pub"
            },
            "vpc_id": "vpc-0c843097e193d7414"
          },
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shared-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:696358308731:vpc/vpc-08ae82dc7a294f8ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-019ceb0a5c6d5eb20",
            "default_route_table_id": "rtb-02f9f4d6e1f686d83",
            "default_security_group_id": "sg-0adbb0c1c354d3c91",
            "dhcp_options_id": "dopt-0362ff2b2c3575449",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ae82dc7a294f8ea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f9f4d6e1f686d83",
            "owner_id": "696358308731",
            "tags": {
              "Name": "shared-vpc"
            },
            "tags_all": {
              "Name": "shared-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:696358308731:vpc/vpc-0c843097e193d7414",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-00e64a281564b32d9",
            "default_route_table_id": "rtb-0fca766871aefb997",
            "default_security_group_id": "sg-0ee4836b6c7fe96a3",
            "dhcp_options_id": "dopt-0362ff2b2c3575449",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c843097e193d7414",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fca766871aefb997",
            "owner_id": "696358308731",
            "tags": {
              "Name": "web-vpc"
            },
            "tags_all": {
              "Name": "web-vpc"
            }
          }
        }
      ]
    }
  ]
}